--- a/page-list.html
+++ b/page-list.html
@@ -9,7 +9,7 @@
 		<link rel="icon" href="favicons/favicon.ico">
 		<link rel="icon" href="favicons/favicon-16x16.png" sizes="16x16">
 		<link rel="icon" href="favicons/favicon-32x32.png" sizes="32x32">
-		<link rel="stylesheet" href="./css/main.css?v=1685706216473">
+		<link rel="stylesheet" href="./css/main.css?v=1685999891299">
 	</head>
 	<body>
 		<!-- Header-->
@@ -197,6 +197,8 @@
 					<li class="list-arrow__elem"><a href="department.html" target="_blank">Отдел службы качества // + моб версия</a></li>
 					<li class="list-arrow__elem"><a href="protection.html" target="_blank">Охрана труда // + моб версия</a></li>
 					<li class="list-arrow__elem"><a href="terminals.html" target="_blank">Наши терминалы // + моб версия</a></li>
+					<li class="list-arrow__elem"><a href="webinars.html" target="_blank">Вебинары // + моб версия</a></li>
+					<li class="list-arrow__elem"><a href="webinar.html" target="_blank">Вебинар // + моб версия</a></li>
 				</ul>
 			</section>
 		</main>
@@ -327,8 +329,8 @@
 				</div>
 			</div>
 		</footer>
-		<script src="./js/vendor.js?v=1685706216474"></script>
-		<script src="./js/main.js?v=1685706216474"></script><svg width="0" height="0" class="hidden">
+		<script src="./js/vendor.js?v=1685999891300"></script>
+		<script src="./js/main.js?v=1685999891300"></script><svg width="0" height="0" class="hidden">
 	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 8" id="chevron-dropdown">
 		<path d="M1 1.28394L6 5.96615L11 1.28394" stroke="#00162F" stroke-width="2" stroke-linecap="round"></path>
 	</symbol>
