--- a/webinars.html
+++ b/webinars.html
@@ -9,7 +9,7 @@
 		<link rel="icon" href="favicons/favicon.ico">
 		<link rel="icon" href="favicons/favicon-16x16.png" sizes="16x16">
 		<link rel="icon" href="favicons/favicon-32x32.png" sizes="32x32">
-		<link rel="stylesheet" href="./css/main.css?v=1685999892908">
+		<link rel="stylesheet" href="./css/main.css?v=1686000320269">
 	</head>
 	<body>
 		<!-- Header-->
@@ -318,48 +318,62 @@
 				</div>
 			</section>
 		</main>
-		<!-- Section Contacts-->
-		<section class="section-contacts">
-			<div class="container">
-				<div class="section-contacts__row">
-					<div class="section-contacts__form-box">
-						<form class="section-contacts__form" action="#">
-							<div class="section-contacts__form-layer section-contacts__form-layer--form">
-								<h2 class="h2 text-white section-contacts__title">Есть вопросы? Свяжитесь с нами!</h2>
-								<div class="section-contacts__form-row">
-									<div class="section-contacts__form-col section-contacts__form-col--inputs">
-										<div class="section-contacts__input-box">
-											<input class="form-control section-contacts__form-input section-contacts__form-input--name" type="text" name="name" placeholder="*Имя"/>
-										</div>
-										<div class="section-contacts__input-box">
-											<input class="form-control section-contacts__form-input section-contacts__form-input--tel" type="tel" name="phone" placeholder="*Телефон"/>
-										</div>
-										<div class="section-contacts__input-box">
-											<input class="form-control section-contacts__form-input section-contacts__form-input--email" type="email" name="email" placeholder="*Адрес электронной почты"/>
-										</div>
+		<!-- Section Contacts White-->
+		<section class="section-contacts-white">
+			<div class="container container--small">
+				<div class="section-contacts-white__row">
+					<form class="section-contacts-white__form" action="#">
+						<div class="section-contacts-white__form-layer section-contacts-white__form-layer--form">
+							<div class="section-contacts-white__feedback-wrap">
+								<div class="section-contacts-white__feedback-box">
+									<p class="section-contacts-white__feedback">
+										Будем рады получить
+										<br class="hide-desktop"/>от вас обратную связь
+									</p>
+								</div>
+								<h2 class="section-contacts-white__title"> Есть вопросы? Свяжитесь с нами!</h2>
+							</div>
+							<div class="section-contacts-white__form-inputs">
+								<div class="section-contacts-white__form-row">
+									<div class="section-contacts-white__input-box">
+										<label class="section-contacts-white__label" for="name">Имя</label>
+										<input class="section-contacts-white__form-input section-contacts-white__form-input--name" type="text" name="name"/>
 									</div>
-									<div class="section-contacts__form-col section-contacts__form-col--message">
-										<div class="section-contacts__textarea-box">
-											<textarea class="form-control form-control--textarea section-contacts__form-textarea section-contacts__form-textarea--comment" name="message" placeholder="*Комментарий..."></textarea>
+									<div class="section-contacts-white__input-box">
+										<label class="section-contacts-white__label" for="phone">Номер телефона</label>
+										<div class="section-contacts-white__input-wrap"><span class="section-contacts-white__input-digit">+7</span>
+											<input class="section-contacts-white__form-input section-contacts-white__form-input--tel" type="tel" name="phone" placeholder="(000) 000-00-00"/>
 										</div>
 									</div>
 								</div>
-								<div class="section-contacts__form-submit-box">
-									<button class="button button--blue button--lg section-contacts__form-submit">Отправить</button>
-									<p class="section-contacts__error-message">Ошибка! Заполните обязательные поля.</p>
+								<div class="section-contacts-white__input-box">
+									<label class="section-contacts-white__label" for="email">Адрес электронной почты</label>
+									<input class="section-contacts-white__form-input section-contacts-white__form-input--email" type="email" name="email"/>
 								</div>
+								<div class="section-contacts-white__textarea-box">
+									<label class="section-contacts-white__label" for="message">Комментарий</label>
+									<textarea class="section-contacts-white__form-textarea section-contacts-white__form-textarea--comment" name="message"></textarea>
+								</div>
+								<div class="section-contacts-white__form-submit-box">
+									<button class="section-contacts-white__form-submit">Отправить</button>
+									<p class="section-contacts-white__error-message">Ошибка! Заполните обязательные поля.</p>
+								</div>
+								<p class="section-contacts-white__politics">
+									Нажимая кнопку, вы принимаете условия нашей политики
+									<a class="section-contacts-white__politics-link" href="#" target="_blank">в отношении обработки персональных данных.</a>
+								</p>
 							</div>
-							<div class="section-contacts__form-layer section-contacts__form-layer--success">
-								<svg class="section-contacts__submitted-icon">
-									<use xlink:href="images/svg-sprite/svg-sprite-static.svg#submitted-form"></use>
-								</svg>
-								<h3 class="h2 text-blue section-contacts__submitted-title">Спасибо! Ваше сообщение принято.</h3>
-								<p class="text-blue section-contacts__submitted-text">В ближайшее время с Вами свяжется менеджер по указанным контактным данным.</p>
-								<button class="button--blue button--lg section-contacts__form-reset" type="reset">Написать еще</button>
-							</div>
-						</form>
-					</div>
-					<div class="section-contacts__img-box"><img class="section-contacts__img" src="images/common/warehouse.svg" alt="alt"/></div>
+						</div>
+						<div class="section-contacts-white__form-layer section-contacts-white__form-layer--success">
+							<svg class="section-contacts-white__submitted-icon">
+								<use xlink:href="images/svg-sprite/svg-sprite-static.svg#submitted-form"></use>
+							</svg>
+							<h3 class="h2 text-blue section-contacts-white__submitted-title">Спасибо! Ваше сообщение принято.</h3>
+							<p class="text-blue section-contacts-white__submitted-text">В ближайшее время с Вами свяжется менеджер по указанным контактным данным.</p>
+							<button class="button--blue button--lg section-contacts-white__form-reset" type="reset">Написать еще</button>
+						</div>
+					</form>
+					<div class="section-contacts-white__img-box"><img class="section-contacts-white__img show-desktop" src="images/common/warehouse-with-logo.svg" alt="alt"/><img class="section-contacts-white__img hide-desktop" src="images/common/warehouse-with-logo-mobile.svg" alt="alt"/></div>
 				</div>
 			</div>
 		</section>
@@ -445,8 +459,8 @@
 				</div>
 			</div>
 		</footer>
-		<script src="./js/vendor.js?v=1685999892909"></script>
-		<script src="./js/main.js?v=1685999892909"></script><svg width="0" height="0" class="hidden">
+		<script src="./js/vendor.js?v=1686000320270"></script>
+		<script src="./js/main.js?v=1686000320270"></script><svg width="0" height="0" class="hidden">
 	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 8" id="chevron-dropdown">
 		<path d="M1 1.28394L6 5.96615L11 1.28394" stroke="#00162F" stroke-width="2" stroke-linecap="round"></path>
 	</symbol>
