--- a/service.html
+++ b/service.html
@@ -9,7 +9,7 @@
 		<link rel="icon" href="favicons/favicon.ico">
 		<link rel="icon" href="favicons/favicon-16x16.png" sizes="16x16">
 		<link rel="icon" href="favicons/favicon-32x32.png" sizes="32x32">
-		<link rel="stylesheet" href="./css/main.css?v=1686057814609">
+		<link rel="stylesheet" href="./css/main.css?v=1686063533055">
 	</head>
 	<body>
 		<!-- Header-->
@@ -237,6 +237,7 @@
 						<p class="links-row__link">Доставка</p>
 						<p class="links-row__link">Подготовка товара к отгрузке на маркетплейсы</p>
 					</div>
+					<p class="section-service-range__text">Политика конфиденциальности персональных данных г. Москва «01» июня 2017 г. Настоящая Политика конфиденциальности персональных данных (далее – Политика конфиденциальности) действует в отношении всей информации, которую Сайт транспортно-логистической группы компаний Major, расположенный на доменном имени www.mjr.ru, может получить о Пользователе во время его использования.</p>
 				</div>
 				<!-- Section Partner-->
 				<div class="section-partner section-partner--type2 section-partner--bg-blue container">
@@ -552,8 +553,8 @@
 				</div>
 			</div>
 		</footer>
-		<script src="./js/vendor.js?v=1686057814610"></script>
-		<script src="./js/main.js?v=1686057814610"></script><svg width="0" height="0" class="hidden">
+		<script src="./js/vendor.js?v=1686063533057"></script>
+		<script src="./js/main.js?v=1686063533057"></script><svg width="0" height="0" class="hidden">
 	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 8" id="chevron-dropdown">
 		<path d="M1 1.28394L6 5.96615L11 1.28394" stroke="#00162F" stroke-width="2" stroke-linecap="round"></path>
 	</symbol>
