--- a/career.html
+++ b/career.html
@@ -9,7 +9,7 @@
 		<link rel="icon" href="favicons/favicon.ico">
 		<link rel="icon" href="favicons/favicon-16x16.png" sizes="16x16">
 		<link rel="icon" href="favicons/favicon-32x32.png" sizes="32x32">
-		<link rel="stylesheet" href="./css/main.css?v=1686063528853">
+		<link rel="stylesheet" href="./css/main.css?v=1686141272002">
 	</head>
 	<body>
 		<!-- Header-->
@@ -242,7 +242,7 @@
 			<!-- Section Vacancy-->
 			<section class="section-vacancy container">
 				<p class="section-vacancy__subtitle">Найдено вакансий: 225</p>
-				<div class="section-vacancy__grid show-more">
+				<div class="section-vacancy__grid">
 					<!-- Vacancy--><a class="section-vacancy__item" href="#">
 						<div class="section-vacancy__item-row">
 							<p class="section-vacancy__item-city">
@@ -279,7 +279,7 @@
 						<div class="section-vacancy__item-row">
 							<p class="section-vacancy__item-title">Менеджер по рекламациям</p><span class="section-vacancy__item-button">Подробнее</span>
 						</div></a>
-					<!-- Vacancy--><a class="section-vacancy__item show-more__mobile-hide" href="#">
+					<!-- Vacancy--><a class="section-vacancy__item" href="#">
 						<div class="section-vacancy__item-row">
 							<p class="section-vacancy__item-city">
 								<svg class="section-vacancy__item-city-marker">
@@ -291,7 +291,7 @@
 						<div class="section-vacancy__item-row">
 							<p class="section-vacancy__item-title">Менеджер по рекламациям</p><span class="section-vacancy__item-button">Подробнее</span>
 						</div></a>
-					<!-- Vacancy--><a class="section-vacancy__item show-more__mobile-hide" href="#">
+					<!-- Vacancy--><a class="section-vacancy__item" href="#">
 						<div class="section-vacancy__item-row">
 							<p class="section-vacancy__item-city">
 								<svg class="section-vacancy__item-city-marker">
@@ -303,7 +303,7 @@
 						<div class="section-vacancy__item-row">
 							<p class="section-vacancy__item-title">Менеджер по рекламациям</p><span class="section-vacancy__item-button">Подробнее</span>
 						</div></a>
-					<!-- Vacancy--><a class="section-vacancy__item show-more__mobile-hide" href="#">
+					<!-- Vacancy--><a class="section-vacancy__item" href="#">
 						<div class="section-vacancy__item-row">
 							<p class="section-vacancy__item-city">
 								<svg class="section-vacancy__item-city-marker">
@@ -315,7 +315,7 @@
 						<div class="section-vacancy__item-row">
 							<p class="section-vacancy__item-title">Менеджер по рекламациям</p><span class="section-vacancy__item-button">Подробнее</span>
 						</div></a>
-					<!-- Vacancy--><a class="section-vacancy__item show-more__mobile-hide" href="#">
+					<!-- Vacancy--><a class="section-vacancy__item" href="#">
 						<div class="section-vacancy__item-row">
 							<p class="section-vacancy__item-city">
 								<svg class="section-vacancy__item-city-marker">
@@ -327,7 +327,7 @@
 						<div class="section-vacancy__item-row">
 							<p class="section-vacancy__item-title">Менеджер по рекламациям</p><span class="section-vacancy__item-button">Подробнее</span>
 						</div></a>
-					<!-- Vacancy--><a class="section-vacancy__item show-more__mobile-hide" href="#">
+					<!-- Vacancy--><a class="section-vacancy__item" href="#">
 						<div class="section-vacancy__item-row">
 							<p class="section-vacancy__item-city">
 								<svg class="section-vacancy__item-city-marker">
@@ -339,7 +339,7 @@
 						<div class="section-vacancy__item-row">
 							<p class="section-vacancy__item-title">Менеджер по рекламациям</p><span class="section-vacancy__item-button">Подробнее</span>
 						</div></a>
-					<!-- Vacancy--><a class="section-vacancy__item show-more__mobile-hide" href="#">
+					<!-- Vacancy--><a class="section-vacancy__item" href="#">
 						<div class="section-vacancy__item-row">
 							<p class="section-vacancy__item-city">
 								<svg class="section-vacancy__item-city-marker">
@@ -352,7 +352,7 @@
 							<p class="section-vacancy__item-title">Менеджер по рекламациям</p><span class="section-vacancy__item-button">Подробнее</span>
 						</div></a>
 				</div>
-				<button class="button button--outline-blue button--md show-more__button hide-desktop">Показать еще</button>
+				<button class="button button--outline-blue button--md section-vacancy__show-more-btn">Показать еще</button>
 			</section>
 		</main>
 		<!-- Section Contacts-->
@@ -489,8 +489,8 @@
 				</div>
 			</div>
 		</footer>
-		<script src="./js/vendor.js?v=1686063528854"></script>
-		<script src="./js/main.js?v=1686063528854"></script><svg width="0" height="0" class="hidden">
+		<script src="./js/vendor.js?v=1686141272004"></script>
+		<script src="./js/main.js?v=1686141272004"></script><svg width="0" height="0" class="hidden">
 	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 8" id="chevron-dropdown">
 		<path d="M1 1.28394L6 5.96615L11 1.28394" stroke="#00162F" stroke-width="2" stroke-linecap="round"></path>
 	</symbol>
