--- a/case-list.html
+++ b/case-list.html
@@ -9,7 +9,7 @@
 		<link rel="icon" href="favicons/favicon.ico">
 		<link rel="icon" href="favicons/favicon-16x16.png" sizes="16x16">
 		<link rel="icon" href="favicons/favicon-32x32.png" sizes="32x32">
-		<link rel="stylesheet" href="./css/main.css?v=1686063529570">
+		<link rel="stylesheet" href="./css/main.css?v=1686141272712">
 	</head>
 	<body>
 		<!-- Header-->
@@ -238,7 +238,7 @@
 					</div>
 				</div>
 				<p class="section-case-list__description section-case-list__description--desktop">Всего найдено: 145</p>
-				<div class="section-case-list__grid show-more">
+				<div class="section-case-list__grid">
 					<!-- Card--><a class="section-case-list__card card card--cases card--with-tag-line" href="#">
 						<ul class="card__tag-list">
 							<li class="card__tag">Fashion</li>
@@ -286,7 +286,7 @@
 							</svg>
 						</div>
 						<div class="card__bg-box"><img class="card__bg" src="images/section-cases/bg3.jpg" alt></div></a>
-					<!-- Card--><a class="section-case-list__card card card--cases card--with-tag-line show-more__mobile-hide" href="#">
+					<!-- Card--><a class="section-case-list__card card card--cases card--with-tag-line" href="#">
 						<ul class="card__tag-list">
 							<li class="card__tag">Fashion</li>
 							<li class="card__tag">Fashion</li>
@@ -301,7 +301,7 @@
 							</svg>
 						</div>
 						<div class="card__bg-box"><img class="card__bg" src="images/section-cases/bg4.jpg" alt></div></a>
-					<!-- Card--><a class="section-case-list__card card card--cases card--with-tag-line show-more__mobile-hide" href="#">
+					<!-- Card--><a class="section-case-list__card card card--cases card--with-tag-line" href="#">
 						<ul class="card__tag-list">
 							<li class="card__tag">Automotive</li>
 							<li class="card__tag">Складское хранение</li>
@@ -316,7 +316,7 @@
 							</svg>
 						</div>
 						<div class="card__bg-box"><img class="card__bg" src="images/section-cases/bg5.jpg" alt></div></a>
-					<!-- Card--><a class="section-case-list__card card card--cases card--with-tag-line show-more__mobile-hide" href="#">
+					<!-- Card--><a class="section-case-list__card card card--cases card--with-tag-line" href="#">
 						<ul class="card__tag-list">
 							<li class="card__tag">Fashion</li>
 							<li class="card__tag">Fashion</li>
@@ -333,7 +333,7 @@
 						<div class="card__bg-box"><img class="card__bg" src="images/section-cases/bg6.jpg" alt></div></a>
 				</div>
 				<div class="section-case-list__button-row">
-					<button class="button button--outline-blue-light button--md section-case-list__button show-more__button">Показать еще</button>
+					<button class="button button--outline-blue-light button--md section-case-list__button">Показать еще</button>
 				</div>
 			</section>
 		</main>
@@ -464,8 +464,8 @@
 				</div>
 			</div>
 		</footer>
-		<script src="./js/vendor.js?v=1686063529572"></script>
-		<script src="./js/main.js?v=1686063529572"></script><svg width="0" height="0" class="hidden">
+		<script src="./js/vendor.js?v=1686141272713"></script>
+		<script src="./js/main.js?v=1686141272713"></script><svg width="0" height="0" class="hidden">
 	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 8" id="chevron-dropdown">
 		<path d="M1 1.28394L6 5.96615L11 1.28394" stroke="#00162F" stroke-width="2" stroke-linecap="round"></path>
 	</symbol>
