--- a/service-list.html
+++ b/service-list.html
@@ -9,7 +9,7 @@
 		<link rel="icon" href="favicons/favicon.ico">
 		<link rel="icon" href="favicons/favicon-16x16.png" sizes="16x16">
 		<link rel="icon" href="favicons/favicon-32x32.png" sizes="32x32">
-		<link rel="stylesheet" href="./css/main.css?v=1686063532736">
+		<link rel="stylesheet" href="./css/main.css?v=1686141275977">
 	</head>
 	<body>
 		<!-- Header-->
@@ -193,7 +193,7 @@
 			<section class="section-service-list container">
 				<h1 class="h1 text-blue section-service-list__title">Услуги</h1>
 				<p class="section-service-list__description">Предоставляем полный спектр складских услуг для Вашего бизнеса</p>
-				<div class="section-service-list__grid show-more">
+				<div class="section-service-list__grid">
 					<!-- Card--><a class="section-service-list__card card card--with-icon card--small-radius" href="#"><img class="card__icon" src="images/section-service-list/icon1.svg">
 						<div class="card__title-box">
 							<p class="card__title">Ответственное<br>хранение</p>
@@ -209,24 +209,24 @@
 							<p class="card__title">Копакинг</p>
 						</div><span class="button button--white button--xs card__btn-more">Подробнее</span>
 						<div class="card__bg-box"><img class="card__bg" src="images/section-service-list/bg9.jpg" alt></div></a>
-					<!-- Card--><a class="section-service-list__card card card--with-icon card--small-radius show-more__mobile-hide" href="#"><img class="card__icon" src="images/section-service-list/icon4.svg">
+					<!-- Card--><a class="section-service-list__card card card--with-icon card--small-radius" href="#"><img class="card__icon" src="images/section-service-list/icon4.svg">
 						<div class="card__title-box">
 							<p class="card__title">Фулфилмент</p>
 						</div><span class="button button--white button--xs card__btn-more">Подробнее</span>
 						<div class="card__bg-box"><img class="card__bg" src="images/section-service-list/bg10.jpg" alt></div></a>
-					<!-- Card--><a class="section-service-list__card card card--with-icon card--small-radius show-more__mobile-hide" href="#"><img class="card__icon" src="images/section-service-list/icon5.svg">
+					<!-- Card--><a class="section-service-list__card card card--with-icon card--small-radius" href="#"><img class="card__icon" src="images/section-service-list/icon5.svg">
 						<div class="card__title-box">
 							<p class="card__title">Маркировка<br>честный знак</p>
 						</div><span class="button button--white button--xs card__btn-more">Подробнее</span>
 						<div class="card__bg-box"><img class="card__bg" src="images/section-service-list/bg11.jpg" alt></div></a>
-					<!-- Card--><a class="section-service-list__card card card--with-icon card--small-radius show-more__mobile-hide" href="#"><img class="card__icon" src="images/section-service-list/icon6.svg">
+					<!-- Card--><a class="section-service-list__card card card--with-icon card--small-radius" href="#"><img class="card__icon" src="images/section-service-list/icon6.svg">
 						<div class="card__title-box">
 							<p class="card__title">Работа с<br>комплектами</p>
 						</div><span class="button button--white button--xs card__btn-more">Подробнее</span>
 						<div class="card__bg-box"><img class="card__bg" src="images/section-service-list/bg12.jpg" alt></div></a>
 				</div>
 				<div class="section-service-list__button-row">
-					<button class="button button--outline-blue button--md section-service-list__button show-more__button">Показать еще</button>
+					<button class="button button--outline-blue button--md section-service-list__button">Показать еще</button>
 				</div>
 			</section>
 		</main>
@@ -357,8 +357,8 @@
 				</div>
 			</div>
 		</footer>
-		<script src="./js/vendor.js?v=1686063532737"></script>
-		<script src="./js/main.js?v=1686063532737"></script><svg width="0" height="0" class="hidden">
+		<script src="./js/vendor.js?v=1686141275979"></script>
+		<script src="./js/main.js?v=1686141275979"></script><svg width="0" height="0" class="hidden">
 	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 8" id="chevron-dropdown">
 		<path d="M1 1.28394L6 5.96615L11 1.28394" stroke="#00162F" stroke-width="2" stroke-linecap="round"></path>
 	</symbol>
