--- a/webinars.html
+++ b/webinars.html
@@ -9,7 +9,7 @@
 		<link rel="icon" href="favicons/favicon.ico">
 		<link rel="icon" href="favicons/favicon-16x16.png" sizes="16x16">
 		<link rel="icon" href="favicons/favicon-32x32.png" sizes="32x32">
-		<link rel="stylesheet" href="./css/main.css?v=1686063534151">
+		<link rel="stylesheet" href="./css/main.css?v=1686141277432">
 	</head>
 	<body>
 		<!-- Header-->
@@ -235,7 +235,7 @@
 						<input class="event-list__search-input" placeholder="Поиск вебинара">
 					</form>
 				</div>
-				<div class="event-list__grid show-more">
+				<div class="event-list__grid">
 					<!-- Webinar-->
 					<article class="event-list__item webinar-card">
 						<time class="webinar-card__time">15 декабря 2022 г. в 12:00</time>
@@ -273,7 +273,7 @@
 						</div>
 					</article>
 					<!-- Webinar-->
-					<article class="event-list__item webinar-card show-more__mobile-hide">
+					<article class="event-list__item webinar-card">
 						<time class="webinar-card__time">15 декабря 2022 г. в 12:00</time>
 						<h2 class="webinar-card__title">Маркировка на<br>таможенном складе</h2>
 						<p class="webinar-card__text">На вебинаре эксперты рассказали о практике мультипродуктового оператора в области маркировки товаров, поделились опытом операционной работы и подготовки к новым этапам маркировки (оборудование + расходники, топология склада, ограничения). Слушателям были даны рекомендации по взаимодействию для получения оптимальных условий.</p><a class="webinar-card__link" href="#">Подробнее
@@ -285,7 +285,7 @@
 						</div>
 					</article>
 					<!-- Webinar-->
-					<article class="event-list__item webinar-card show-more__mobile-hide">
+					<article class="event-list__item webinar-card">
 						<time class="webinar-card__time">15 декабря 2022 г. в 12:00</time>
 						<h2 class="webinar-card__title">Маркировка на<br>таможенном складе</h2>
 						<p class="webinar-card__text">На вебинаре эксперты рассказали о практике мультипродуктового оператора в области маркировки товаров, поделились опытом операционной работы и подготовки к новым этапам маркировки (оборудование + расходники, топология склада, ограничения). Слушателям были даны рекомендации по взаимодействию для получения оптимальных условий.</p><a class="webinar-card__link" href="#">Подробнее
@@ -297,7 +297,7 @@
 						</div>
 					</article>
 					<!-- Webinar-->
-					<article class="event-list__item webinar-card show-more__mobile-hide">
+					<article class="event-list__item webinar-card">
 						<time class="webinar-card__time">15 декабря 2022 г. в 12:00</time>
 						<h2 class="webinar-card__title">Маркировка на<br>таможенном складе</h2>
 						<p class="webinar-card__text">На вебинаре эксперты рассказали о практике мультипродуктового оператора в области маркировки товаров, поделились опытом операционной работы и подготовки к новым этапам маркировки (оборудование + расходники, топология склада, ограничения). Слушателям были даны рекомендации по взаимодействию для получения оптимальных условий.</p><a class="webinar-card__link" href="#">Подробнее
@@ -310,7 +310,7 @@
 					</article>
 				</div>
 				<div class="event-list__btn-box">
-					<button class="event-list__btn show-more__button">Показать ещё
+					<button class="event-list__btn">Показать ещё
 						<svg class="event-list__btn-icon">
 							<use xlink:href="images/svg-sprite/svg-sprite-static.svg#plus"></use>
 						</svg>
@@ -459,8 +459,8 @@
 				</div>
 			</div>
 		</footer>
-		<script src="./js/vendor.js?v=1686063534152"></script>
-		<script src="./js/main.js?v=1686063534152"></script><svg width="0" height="0" class="hidden">
+		<script src="./js/vendor.js?v=1686141277434"></script>
+		<script src="./js/main.js?v=1686141277434"></script><svg width="0" height="0" class="hidden">
 	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 8" id="chevron-dropdown">
 		<path d="M1 1.28394L6 5.96615L11 1.28394" stroke="#00162F" stroke-width="2" stroke-linecap="round"></path>
 	</symbol>
