--- a/webinars.html
+++ b/webinars.html
@@ -9,7 +9,7 @@
 		<link rel="icon" href="favicons/favicon.ico">
 		<link rel="icon" href="favicons/favicon-16x16.png" sizes="16x16">
 		<link rel="icon" href="favicons/favicon-32x32.png" sizes="32x32">
-		<link rel="stylesheet" href="./css/main.css?v=1686141277432">
+		<link rel="stylesheet" href="./css/main.css?v=1686834348605">
 	</head>
 	<body>
 		<!-- Header-->
@@ -191,8 +191,11 @@
 								<svg class="webinar-card__link-icon">
 									<use xlink:href="images/svg-sprite/svg-sprite-static.svg#arrow-right"></use>
 								</svg></a>
-							<div class="webinar-card__author">
-								<div class="webinar-card__author-photo-box"><img class="webinar-card__author-photo" src="images/webinar/photo.png" alt></div><span class="webinar-card__author-name">Петр Соколов</span>
+							<div class="webinar-card__author webinar-card__author--list">
+								<div class="webinar-card__author-photo-box"><img class="webinar-card__author-photo" src="images/webinar/photo1.jpg" alt></div>
+								<div class="webinar-card__author-photo-box"><img class="webinar-card__author-photo" src="images/webinar/photo2.jpg" alt></div>
+								<div class="webinar-card__author-photo-box"><img class="webinar-card__author-photo" src="images/webinar/photo3.jpg" alt></div>
+								<div class="webinar-card__author-photo-box"><img class="webinar-card__author-photo" src="images/webinar/photo4.jpg" alt></div><span class="webinar-card__author-name">4 ведущих</span>
 							</div><a class="webinar-card__register-btn" href="#">Регистрация</a>
 						</article>
 						<!-- Webinar-->
@@ -204,7 +207,7 @@
 									<use xlink:href="images/svg-sprite/svg-sprite-static.svg#arrow-right"></use>
 								</svg></a>
 							<div class="webinar-card__author">
-								<div class="webinar-card__author-photo-box"><img class="webinar-card__author-photo" src="images/webinar/photo.png" alt></div><span class="webinar-card__author-name">Петр Соколов</span>
+								<div class="webinar-card__author-photo-box"><img class="webinar-card__author-photo" src="images/webinar/photo1.jpg" alt></div><span class="webinar-card__author-name">Петр Соколов</span>
 							</div><a class="webinar-card__register-btn" href="#">Регистрация</a>
 						</article>
 						<!-- Webinar-->
@@ -216,7 +219,7 @@
 									<use xlink:href="images/svg-sprite/svg-sprite-static.svg#arrow-right"></use>
 								</svg></a>
 							<div class="webinar-card__author">
-								<div class="webinar-card__author-photo-box"><img class="webinar-card__author-photo" src="images/webinar/photo.png" alt></div><span class="webinar-card__author-name">Петр Соколов</span>
+								<div class="webinar-card__author-photo-box"><img class="webinar-card__author-photo" src="images/webinar/photo1.jpg" alt></div><span class="webinar-card__author-name">Петр Соколов</span>
 							</div><a class="webinar-card__register-btn" href="#">Регистрация</a>
 						</article>
 					</div>
@@ -245,7 +248,7 @@
 								<use xlink:href="images/svg-sprite/svg-sprite-static.svg#arrow-right"></use>
 							</svg></a>
 						<div class="webinar-card__author">
-							<div class="webinar-card__author-photo-box"><img class="webinar-card__author-photo" src="images/webinar/photo.png" alt></div><span class="webinar-card__author-name">Петр Соколов</span>
+							<div class="webinar-card__author-photo-box"><img class="webinar-card__author-photo" src="images/webinar/photo1.jpg" alt></div><span class="webinar-card__author-name">Петр Соколов</span>
 						</div>
 					</article>
 					<!-- Webinar-->
@@ -257,7 +260,7 @@
 								<use xlink:href="images/svg-sprite/svg-sprite-static.svg#arrow-right"></use>
 							</svg></a>
 						<div class="webinar-card__author">
-							<div class="webinar-card__author-photo-box"><img class="webinar-card__author-photo" src="images/webinar/photo.png" alt></div><span class="webinar-card__author-name">Петр Соколов</span>
+							<div class="webinar-card__author-photo-box"><img class="webinar-card__author-photo" src="images/webinar/photo1.jpg" alt></div><span class="webinar-card__author-name">Петр Соколов</span>
 						</div>
 					</article>
 					<!-- Webinar-->
@@ -269,7 +272,7 @@
 								<use xlink:href="images/svg-sprite/svg-sprite-static.svg#arrow-right"></use>
 							</svg></a>
 						<div class="webinar-card__author">
-							<div class="webinar-card__author-photo-box"><img class="webinar-card__author-photo" src="images/webinar/photo.png" alt></div><span class="webinar-card__author-name">Петр Соколов</span>
+							<div class="webinar-card__author-photo-box"><img class="webinar-card__author-photo" src="images/webinar/photo1.jpg" alt></div><span class="webinar-card__author-name">Петр Соколов</span>
 						</div>
 					</article>
 					<!-- Webinar-->
@@ -281,7 +284,7 @@
 								<use xlink:href="images/svg-sprite/svg-sprite-static.svg#arrow-right"></use>
 							</svg></a>
 						<div class="webinar-card__author">
-							<div class="webinar-card__author-photo-box"><img class="webinar-card__author-photo" src="images/webinar/photo.png" alt></div><span class="webinar-card__author-name">Петр Соколов</span>
+							<div class="webinar-card__author-photo-box"><img class="webinar-card__author-photo" src="images/webinar/photo1.jpg" alt></div><span class="webinar-card__author-name">Петр Соколов</span>
 						</div>
 					</article>
 					<!-- Webinar-->
@@ -293,7 +296,7 @@
 								<use xlink:href="images/svg-sprite/svg-sprite-static.svg#arrow-right"></use>
 							</svg></a>
 						<div class="webinar-card__author">
-							<div class="webinar-card__author-photo-box"><img class="webinar-card__author-photo" src="images/webinar/photo.png" alt></div><span class="webinar-card__author-name">Петр Соколов</span>
+							<div class="webinar-card__author-photo-box"><img class="webinar-card__author-photo" src="images/webinar/photo1.jpg" alt></div><span class="webinar-card__author-name">Петр Соколов</span>
 						</div>
 					</article>
 					<!-- Webinar-->
@@ -305,7 +308,7 @@
 								<use xlink:href="images/svg-sprite/svg-sprite-static.svg#arrow-right"></use>
 							</svg></a>
 						<div class="webinar-card__author">
-							<div class="webinar-card__author-photo-box"><img class="webinar-card__author-photo" src="images/webinar/photo.png" alt></div><span class="webinar-card__author-name">Петр Соколов</span>
+							<div class="webinar-card__author-photo-box"><img class="webinar-card__author-photo" src="images/webinar/photo1.jpg" alt></div><span class="webinar-card__author-name">Петр Соколов</span>
 						</div>
 					</article>
 				</div>
@@ -319,7 +322,7 @@
 			</section>
 		</main>
 		<!-- Section Contacts White-->
-		<section class="section-contacts-white">
+		<section class="section-contacts-white" id="section-contacts">
 			<div class="container container--small">
 				<div class="section-contacts-white__row">
 					<form class="section-contacts-white__form" action="#">
@@ -459,8 +462,8 @@
 				</div>
 			</div>
 		</footer>
-		<script src="./js/vendor.js?v=1686141277434"></script>
-		<script src="./js/main.js?v=1686141277434"></script><svg width="0" height="0" class="hidden">
+		<script src="./js/vendor.js?v=1686834348606"></script>
+		<script src="./js/main.js?v=1686834348606"></script><svg width="0" height="0" class="hidden">
 	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 8" id="chevron-dropdown">
 		<path d="M1 1.28394L6 5.96615L11 1.28394" stroke="#00162F" stroke-width="2" stroke-linecap="round"></path>
 	</symbol>
