--- a/webinar.html
+++ b/webinar.html
@@ -9,7 +9,7 @@
 		<link rel="icon" href="favicons/favicon.ico">
 		<link rel="icon" href="favicons/favicon-16x16.png" sizes="16x16">
 		<link rel="icon" href="favicons/favicon-32x32.png" sizes="32x32">
-		<link rel="stylesheet" href="./css/main.css?v=1686141276844">
+		<link rel="stylesheet" href="./css/main.css?v=1686834348207">
 	</head>
 	<body>
 		<!-- Header-->
@@ -187,28 +187,35 @@
 					<div class="webinar__text-block">
 						<p class="webinar__text">На вебинаре эксперты рассказали о практике мультипродуктового оператора в области маркировки товаров, поделились опытом операционной работы и подготовки к новым этапам маркировки (оборудование + расходники, топология склада, ограничения). Слушателям были даны рекомендации по взаимодействию для получения оптимальных условий.</p>
 						<p class="webinar__text">
-							Вы так же можете направить интересующие Вас вопросы на почту
-							<strong>webinar@mjr.ru</strong>. Наши эксперты подготовят ответ.
+							Вы так же можете направить интересующие Вас вопросы через
+							<a class="webinar__form-link" href="#section-contacts" data-scroll-to="section-contacts">форму обратной связи</a>. Наши эксперты подготовят ответ.
 						</p>
 						<div class="webinar__expert-list">
 							<h2 class="webinar__expert-title">Эксперты вебинара</h2>
 							<div class="webinar__expert-grid">
 								<div class="webinar__expert">
-									<div class="webinar__expert-photo-box"><img class="webinar__expert-photo" src="images/webinar/photo.png"></div>
+									<div class="webinar__expert-photo-box"><img class="webinar__expert-photo" src="images/webinar/photo1.jpg"></div>
 									<div class="webinar__expert-description">
 										<p class="webinar__expert-name">Петр Соколов</p>
 										<p class="webinar__expert-job">Руководитель</p>
 									</div>
 								</div>
 								<div class="webinar__expert">
-									<div class="webinar__expert-photo-box"><img class="webinar__expert-photo" src="images/webinar/photo.png"></div>
+									<div class="webinar__expert-photo-box"><img class="webinar__expert-photo" src="images/webinar/photo1.jpg"></div>
 									<div class="webinar__expert-description">
 										<p class="webinar__expert-name">Петр Соколов</p>
 										<p class="webinar__expert-job">Руководитель</p>
 									</div>
 								</div>
 								<div class="webinar__expert">
-									<div class="webinar__expert-photo-box"><img class="webinar__expert-photo" src="images/webinar/photo.png"></div>
+									<div class="webinar__expert-photo-box"><img class="webinar__expert-photo" src="images/webinar/photo1.jpg"></div>
+									<div class="webinar__expert-description">
+										<p class="webinar__expert-name">Петр Соколов</p>
+										<p class="webinar__expert-job">Руководитель</p>
+									</div>
+								</div>
+								<div class="webinar__expert">
+									<div class="webinar__expert-photo-box"><img class="webinar__expert-photo" src="images/webinar/photo1.jpg"></div>
 									<div class="webinar__expert-description">
 										<p class="webinar__expert-name">Петр Соколов</p>
 										<p class="webinar__expert-job">Руководитель</p>
@@ -227,7 +234,7 @@
 									<use xlink:href="images/svg-sprite/svg-sprite-static.svg#arrow-right"></use>
 								</svg></a>
 							<div class="webinar-card__author">
-								<div class="webinar-card__author-photo-box"><img class="webinar-card__author-photo" src="images/webinar/photo.png" alt></div><span class="webinar-card__author-name">Петр Соколов</span>
+								<div class="webinar-card__author-photo-box"><img class="webinar-card__author-photo" src="images/webinar/photo1.jpg" alt></div><span class="webinar-card__author-name">Петр Соколов</span>
 							</div>
 						</article>
 						<!-- Webinar-->
@@ -239,7 +246,7 @@
 									<use xlink:href="images/svg-sprite/svg-sprite-static.svg#arrow-right"></use>
 								</svg></a>
 							<div class="webinar-card__author">
-								<div class="webinar-card__author-photo-box"><img class="webinar-card__author-photo" src="images/webinar/photo.png" alt></div><span class="webinar-card__author-name">Петр Соколов</span>
+								<div class="webinar-card__author-photo-box"><img class="webinar-card__author-photo" src="images/webinar/photo1.jpg" alt></div><span class="webinar-card__author-name">Петр Соколов</span>
 							</div>
 						</article>
 						<!-- Webinar-->
@@ -251,7 +258,7 @@
 									<use xlink:href="images/svg-sprite/svg-sprite-static.svg#arrow-right"></use>
 								</svg></a>
 							<div class="webinar-card__author">
-								<div class="webinar-card__author-photo-box"><img class="webinar-card__author-photo" src="images/webinar/photo.png" alt></div><span class="webinar-card__author-name">Петр Соколов</span>
+								<div class="webinar-card__author-photo-box"><img class="webinar-card__author-photo" src="images/webinar/photo1.jpg" alt></div><span class="webinar-card__author-name">Петр Соколов</span>
 							</div>
 						</article>
 					</div>
@@ -259,7 +266,7 @@
 			</section>
 		</main>
 		<!-- Section Contacts White-->
-		<section class="section-contacts-white">
+		<section class="section-contacts-white" id="section-contacts">
 			<div class="container container--small">
 				<div class="section-contacts-white__row">
 					<form class="section-contacts-white__form" action="#">
@@ -399,8 +406,8 @@
 				</div>
 			</div>
 		</footer>
-		<script src="./js/vendor.js?v=1686141276845"></script>
-		<script src="./js/main.js?v=1686141276845"></script><svg width="0" height="0" class="hidden">
+		<script src="./js/vendor.js?v=1686834348208"></script>
+		<script src="./js/main.js?v=1686834348208"></script><svg width="0" height="0" class="hidden">
 	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 8" id="chevron-dropdown">
 		<path d="M1 1.28394L6 5.96615L11 1.28394" stroke="#00162F" stroke-width="2" stroke-linecap="round"></path>
 	</symbol>
