--- a/webinar2.html
+++ b/webinar2.html
@@ -9,7 +9,7 @@
 		<link rel="icon" href="favicons/favicon.ico">
 		<link rel="icon" href="favicons/favicon-16x16.png" sizes="16x16">
 		<link rel="icon" href="favicons/favicon-32x32.png" sizes="32x32">
-		<link rel="stylesheet" href="./css/main.css?v=1686141277111">
+		<link rel="stylesheet" href="./css/main.css?v=1686834348402">
 	</head>
 	<body>
 		<!-- Header-->
@@ -187,7 +187,7 @@
 						<p class="webinar__text">На вебинаре эксперты рассказали о практике мультипродуктового оператора в области маркировки товаров, поделились опытом операционной работы и подготовки к новым этапам маркировки (оборудование + расходники, топология склада, ограничения). Слушателям были даны рекомендации по взаимодействию для получения оптимальных условий.</p>
 						<p class="webinar__text">
 							Вы так же можете направить интересующие Вас вопросы на почту
-							<strong>webinar@mjr.ru</strong>. Наши эксперты подготовят ответ.
+							<a class="webinar__form-link" href="#section-contacts" data-scroll-to="section-contacts">форму обратной связи</a>. Наши эксперты подготовят ответ.
 						</p>
 						<div class="webinar__video-wrapper">
 							<iframe class="webinar__video" width="560" height="315" src="https://www.youtube-nocookie.com/embed/QK4xl5c8w7Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -196,21 +196,28 @@
 							<h2 class="webinar__expert-title">Эксперты вебинара</h2>
 							<div class="webinar__expert-grid">
 								<div class="webinar__expert">
-									<div class="webinar__expert-photo-box"><img class="webinar__expert-photo" src="images/webinar/photo.png"></div>
+									<div class="webinar__expert-photo-box"><img class="webinar__expert-photo" src="images/webinar/photo1.jpg"></div>
 									<div class="webinar__expert-description">
 										<p class="webinar__expert-name">Петр Соколов</p>
 										<p class="webinar__expert-job">Руководитель</p>
 									</div>
 								</div>
 								<div class="webinar__expert">
-									<div class="webinar__expert-photo-box"><img class="webinar__expert-photo" src="images/webinar/photo.png"></div>
+									<div class="webinar__expert-photo-box"><img class="webinar__expert-photo" src="images/webinar/photo1.jpg"></div>
 									<div class="webinar__expert-description">
 										<p class="webinar__expert-name">Петр Соколов</p>
 										<p class="webinar__expert-job">Руководитель</p>
 									</div>
 								</div>
 								<div class="webinar__expert">
-									<div class="webinar__expert-photo-box"><img class="webinar__expert-photo" src="images/webinar/photo.png"></div>
+									<div class="webinar__expert-photo-box"><img class="webinar__expert-photo" src="images/webinar/photo1.jpg"></div>
+									<div class="webinar__expert-description">
+										<p class="webinar__expert-name">Петр Соколов</p>
+										<p class="webinar__expert-job">Руководитель</p>
+									</div>
+								</div>
+								<div class="webinar__expert">
+									<div class="webinar__expert-photo-box"><img class="webinar__expert-photo" src="images/webinar/photo1.jpg"></div>
 									<div class="webinar__expert-description">
 										<p class="webinar__expert-name">Петр Соколов</p>
 										<p class="webinar__expert-job">Руководитель</p>
@@ -229,7 +236,7 @@
 									<use xlink:href="images/svg-sprite/svg-sprite-static.svg#arrow-right"></use>
 								</svg></a>
 							<div class="webinar-card__author">
-								<div class="webinar-card__author-photo-box"><img class="webinar-card__author-photo" src="images/webinar/photo.png" alt></div><span class="webinar-card__author-name">Петр Соколов</span>
+								<div class="webinar-card__author-photo-box"><img class="webinar-card__author-photo" src="images/webinar/photo1.jpg" alt></div><span class="webinar-card__author-name">Петр Соколов</span>
 							</div>
 						</article>
 						<!-- Webinar-->
@@ -241,7 +248,7 @@
 									<use xlink:href="images/svg-sprite/svg-sprite-static.svg#arrow-right"></use>
 								</svg></a>
 							<div class="webinar-card__author">
-								<div class="webinar-card__author-photo-box"><img class="webinar-card__author-photo" src="images/webinar/photo.png" alt></div><span class="webinar-card__author-name">Петр Соколов</span>
+								<div class="webinar-card__author-photo-box"><img class="webinar-card__author-photo" src="images/webinar/photo1.jpg" alt></div><span class="webinar-card__author-name">Петр Соколов</span>
 							</div>
 						</article>
 						<!-- Webinar-->
@@ -253,7 +260,7 @@
 									<use xlink:href="images/svg-sprite/svg-sprite-static.svg#arrow-right"></use>
 								</svg></a>
 							<div class="webinar-card__author">
-								<div class="webinar-card__author-photo-box"><img class="webinar-card__author-photo" src="images/webinar/photo.png" alt></div><span class="webinar-card__author-name">Петр Соколов</span>
+								<div class="webinar-card__author-photo-box"><img class="webinar-card__author-photo" src="images/webinar/photo1.jpg" alt></div><span class="webinar-card__author-name">Петр Соколов</span>
 							</div>
 						</article>
 					</div>
@@ -261,7 +268,7 @@
 			</section>
 		</main>
 		<!-- Section Contacts White-->
-		<section class="section-contacts-white">
+		<section class="section-contacts-white" id="section-contacts">
 			<div class="container container--small">
 				<div class="section-contacts-white__row">
 					<form class="section-contacts-white__form" action="#">
@@ -401,8 +408,8 @@
 				</div>
 			</div>
 		</footer>
-		<script src="./js/vendor.js?v=1686141277112"></script>
-		<script src="./js/main.js?v=1686141277112"></script><svg width="0" height="0" class="hidden">
+		<script src="./js/vendor.js?v=1686834348403"></script>
+		<script src="./js/main.js?v=1686834348403"></script><svg width="0" height="0" class="hidden">
 	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 8" id="chevron-dropdown">
 		<path d="M1 1.28394L6 5.96615L11 1.28394" stroke="#00162F" stroke-width="2" stroke-linecap="round"></path>
 	</symbol>
